k8s/chatbot-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-service
  namespace: chatbot
  labels:
    app: chatbot-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-service
  template:
    metadata:
      labels:
        app: chatbot-service
    spec:
      containers:
        - name: chatbot-service
          image: $IMAGE:$IMAGE_TAG
          ports:
            - containerPort: 8085
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      restartPolicy: Always
