k8s/chatbot-service-rendered.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-service
  namespace: chatbot
  labels:
    app: chatbot-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-service
  template:
    metadata:
      labels:
        app: chatbot-service
    spec:
      serviceAccountName: chatbot-sa
      containers:
        - name: chatbot-service
          image: 310095858382.dkr.ecr.ap-northeast-2.amazonaws.com/chatbot-service:v9
          ports:
            - containerPort: 8085
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
  namespace: chatbot
  labels:
    app: chatbot-service
spec:
  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP
  selector:
    app: chatbot-service
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ingress
  namespace: chatbot
  annotations:
    alb.ingress.kubernetes.io/group.name: sigma
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
spec:
  rules:
    - http:
        paths:
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chatbot-service
                port:
                  number: 8085
          - path: /api/ai
            pathType: Prefix
            backend:
              service:
                name: chatbot-service
                port:
                  number: 8085
